--- a/src/Untitled.ipynb
+++ b/src/Untitled.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -185,8 +185,6 @@
        "      <th>twitter_username</th>\n",
        "      <th>category_code</th>\n",
        "      <th>...</th>\n",
-       "      <th>Tech/Other</th>\n",
-       "      <th>Closest_Airport</th>\n",
        "      <th>Closest_oldCo</th>\n",
        "      <th>Closest_Starbucks</th>\n",
        "      <th>Closest_techCo</th>\n",
@@ -195,6 +193,8 @@
        "      <th>Airport_Longitude</th>\n",
        "      <th>Starbucks_Latitude</th>\n",
        "      <th>Starbucks_Longitude</th>\n",
+       "      <th>TechCo_Latitude</th>\n",
+       "      <th>TechCo_Longitude</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -211,8 +211,6 @@
        "      <td>NaN</td>\n",
        "      <td>ecommerce</td>\n",
        "      <td>...</td>\n",
-       "      <td>Tech</td>\n",
-       "      <td>[{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[{'_id': 5dd67f43e1d2f64cdaf44024, 'city': 'Au...</td>\n",
        "      <td>[{'_id': '52cdef7c4bab8bd67529809a', 'Unnamed:...</td>\n",
@@ -221,6 +219,8 @@
        "      <td>-97.666837</td>\n",
        "      <td>30.292404</td>\n",
        "      <td>-97.825104</td>\n",
+       "      <td>30.288653</td>\n",
+       "      <td>-97.822884</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -235,8 +235,6 @@
        "      <td>NaN</td>\n",
        "      <td>web</td>\n",
        "      <td>...</td>\n",
-       "      <td>Tech</td>\n",
-       "      <td>[{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[{'_id': 5dd67f43e1d2f64cdaf42d9b, 'city': 'Au...</td>\n",
        "      <td>[{'_id': '52cdef7c4bab8bd6752982f7', 'Unnamed:...</td>\n",
@@ -245,6 +243,8 @@
        "      <td>-97.666837</td>\n",
        "      <td>30.237675</td>\n",
        "      <td>-97.792549</td>\n",
+       "      <td>30.242865</td>\n",
+       "      <td>-97.798398</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -259,8 +259,6 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>[{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[{'_id': 5dd67f43e1d2f64cdaf42d9b, 'city': 'Au...</td>\n",
        "      <td>[{'_id': '52cdef7c4bab8bd6752982f7', 'Unnamed:...</td>\n",
@@ -269,6 +267,8 @@
        "      <td>-97.666837</td>\n",
        "      <td>30.237675</td>\n",
        "      <td>-97.792549</td>\n",
+       "      <td>30.242865</td>\n",
+       "      <td>-97.798398</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -283,8 +283,6 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>[{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[{'_id': 5dd67f43e1d2f64cdaf42990, 'city': 'Au...</td>\n",
        "      <td>[{'_id': '52cdef7c4bab8bd6752983ba', 'Unnamed:...</td>\n",
@@ -293,6 +291,8 @@
        "      <td>-97.666837</td>\n",
        "      <td>30.401922</td>\n",
        "      <td>-97.746902</td>\n",
+       "      <td>30.405197</td>\n",
+       "      <td>-97.745673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -307,8 +307,6 @@
        "      <td>absolutecorp</td>\n",
        "      <td>software</td>\n",
        "      <td>...</td>\n",
-       "      <td>Tech</td>\n",
-       "      <td>[{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[{'_id': 5dd67f43e1d2f64cdaf44588, 'city': 'Au...</td>\n",
        "      <td>[{'_id': '52cdef7f4bab8bd67529c39e', 'Unnamed:...</td>\n",
@@ -317,6 +315,8 @@
        "      <td>-97.666837</td>\n",
        "      <td>30.265875</td>\n",
        "      <td>-97.746445</td>\n",
+       "      <td>30.264043</td>\n",
+       "      <td>-97.744762</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -331,8 +331,6 @@
        "      <td>NaN</td>\n",
        "      <td>games_video</td>\n",
        "      <td>...</td>\n",
-       "      <td>Tech</td>\n",
-       "      <td>[{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[{'_id': 5dd67f43e1d2f64cdaf411a3, 'city': 'Au...</td>\n",
        "      <td>[{'_id': '52cdef7e4bab8bd67529ad8b', 'Unnamed:...</td>\n",
@@ -341,6 +339,8 @@
        "      <td>-97.666837</td>\n",
        "      <td>30.418882</td>\n",
        "      <td>-97.702713</td>\n",
+       "      <td>30.424305</td>\n",
+       "      <td>-97.709981</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -355,8 +355,6 @@
        "      <td>infochimps</td>\n",
        "      <td>enterprise</td>\n",
        "      <td>...</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>[{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[{'_id': 5dd67f43e1d2f64cdaf41de4, 'city': 'Au...</td>\n",
        "      <td>[{'_id': '52cdef7e4bab8bd67529b8c0', 'Unnamed:...</td>\n",
@@ -365,6 +363,8 @@
        "      <td>-97.666837</td>\n",
        "      <td>30.269783</td>\n",
        "      <td>-97.753914</td>\n",
+       "      <td>30.273482</td>\n",
+       "      <td>-97.758883</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -379,8 +379,6 @@
        "      <td>usefulwebapps</td>\n",
        "      <td>web</td>\n",
        "      <td>...</td>\n",
-       "      <td>Tech</td>\n",
-       "      <td>[{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[{'_id': 5dd67f43e1d2f64cdaf41447, 'city': 'Au...</td>\n",
        "      <td>[{'_id': '52cdef7e4bab8bd67529bcf8', 'Unnamed:...</td>\n",
@@ -389,6 +387,8 @@
        "      <td>-97.666837</td>\n",
        "      <td>30.302490</td>\n",
        "      <td>-97.738510</td>\n",
+       "      <td>30.296171</td>\n",
+       "      <td>-97.738954</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -403,8 +403,6 @@
        "      <td>NaN</td>\n",
        "      <td>biotech</td>\n",
        "      <td>...</td>\n",
-       "      <td>Tech</td>\n",
-       "      <td>[{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[{'_id': 5dd67f43e1d2f64cdaf4302f, 'city': 'Au...</td>\n",
        "      <td>[{'_id': '52cdef7f4bab8bd67529c01d', 'Unnamed:...</td>\n",
@@ -413,6 +411,8 @@
        "      <td>-97.666837</td>\n",
        "      <td>30.220448</td>\n",
        "      <td>-97.757416</td>\n",
+       "      <td>30.213039</td>\n",
+       "      <td>-97.751754</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -427,8 +427,6 @@
        "      <td>NaN</td>\n",
        "      <td>enterprise</td>\n",
        "      <td>...</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>[{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[{'_id': 5dd67f43e1d2f64cdaf44e60, 'city': 'Au...</td>\n",
        "      <td>[{'_id': '52cdef7f4bab8bd67529c39e', 'Unnamed:...</td>\n",
@@ -437,10 +435,12 @@
        "      <td>-97.666837</td>\n",
        "      <td>30.264475</td>\n",
        "      <td>-97.743774</td>\n",
+       "      <td>30.264043</td>\n",
+       "      <td>-97.744762</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 61 columns</p>\n",
+       "<p>10 rows × 63 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -492,18 +492,6 @@
        "8                                  NaN              NaN       biotech  ...   \n",
        "9                                  NaN              NaN    enterprise  ...   \n",
        "\n",
-       "   Tech/Other                                    Closest_Airport  \\\n",
-       "0        Tech  [{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...   \n",
-       "1        Tech  [{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...   \n",
-       "2       Other  [{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...   \n",
-       "3       Other  [{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...   \n",
-       "4        Tech  [{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...   \n",
-       "5        Tech  [{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...   \n",
-       "6       Other  [{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...   \n",
-       "7        Tech  [{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...   \n",
-       "8        Tech  [{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...   \n",
-       "9       Other  [{'_id': 5dd675f33b0eaf5b22d77d95, 'name': 'Au...   \n",
-       "\n",
        "   Closest_oldCo                                  Closest_Starbucks  \\\n",
        "0             []  [{'_id': 5dd67f43e1d2f64cdaf44024, 'city': 'Au...   \n",
        "1             []  [{'_id': 5dd67f43e1d2f64cdaf42d9b, 'city': 'Au...   \n",
@@ -528,22 +516,34 @@
        "8  [{'_id': '52cdef7f4bab8bd67529c01d', 'Unnamed:...                       2   \n",
        "9  [{'_id': '52cdef7f4bab8bd67529c39e', 'Unnamed:...                       8   \n",
        "\n",
-       "  Airport_Latitude Airport_Longitude Starbucks_Latitude Starbucks_Longitude  \n",
-       "0        30.202108        -97.666837          30.292404          -97.825104  \n",
-       "1        30.202108        -97.666837          30.237675          -97.792549  \n",
-       "2        30.202108        -97.666837          30.237675          -97.792549  \n",
-       "3        30.202108        -97.666837          30.401922          -97.746902  \n",
-       "4        30.202108        -97.666837          30.265875          -97.746445  \n",
-       "5        30.202108        -97.666837          30.418882          -97.702713  \n",
-       "6        30.202108        -97.666837          30.269783          -97.753914  \n",
-       "7        30.202108        -97.666837          30.302490          -97.738510  \n",
-       "8        30.202108        -97.666837          30.220448          -97.757416  \n",
-       "9        30.202108        -97.666837          30.264475          -97.743774  \n",
+       "  Airport_Latitude Airport_Longitude Starbucks_Latitude Starbucks_Longitude  \\\n",
+       "0        30.202108        -97.666837          30.292404          -97.825104   \n",
+       "1        30.202108        -97.666837          30.237675          -97.792549   \n",
+       "2        30.202108        -97.666837          30.237675          -97.792549   \n",
+       "3        30.202108        -97.666837          30.401922          -97.746902   \n",
+       "4        30.202108        -97.666837          30.265875          -97.746445   \n",
+       "5        30.202108        -97.666837          30.418882          -97.702713   \n",
+       "6        30.202108        -97.666837          30.269783          -97.753914   \n",
+       "7        30.202108        -97.666837          30.302490          -97.738510   \n",
+       "8        30.202108        -97.666837          30.220448          -97.757416   \n",
+       "9        30.202108        -97.666837          30.264475          -97.743774   \n",
        "\n",
-       "[10 rows x 61 columns]"
+       "  TechCo_Latitude TechCo_Longitude  \n",
+       "0       30.288653       -97.822884  \n",
+       "1       30.242865       -97.798398  \n",
+       "2       30.242865       -97.798398  \n",
+       "3       30.405197       -97.745673  \n",
+       "4       30.264043       -97.744762  \n",
+       "5       30.424305       -97.709981  \n",
+       "6       30.273482       -97.758883  \n",
+       "7       30.296171       -97.738954  \n",
+       "8       30.213039       -97.751754  \n",
+       "9       30.264043       -97.744762  \n",
+       "\n",
+       "[10 rows x 63 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,10 +554,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"500px\"\n",
+       "            src=\"m1.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fd6429d1518>"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import folium\n",
+    "from folium.plugins import HeatMap\n",
+    "\n",
+    "def embed_map(m, file_name):\n",
+    "    from IPython.display import IFrame\n",
+    "    m.save(file_name)\n",
+    "    return IFrame(file_name, width='100%', height='500px')  \n",
+    "\n",
+    "# Create map with release incidents and monitoring stations\n",
+    "m = folium.Map(location=[30.288653 ,-97.822884], zoom_start=11)\n",
+    "HeatMap(data=df_austin_final[['latitude', 'longitude']], radius=50).add_to(m)\n",
+    "for idx, row in df_austin_final.iterrows():\n",
+    "    folium.Marker([row['latitude'], row['longitude']], icon=folium.Icon(icon='home',color='blue')).add_to(m)\n",
+    "    folium.Marker([row['Starbucks_Latitude'], row['Starbucks_Longitude']], icon=folium.Icon(icon='cutlery',color='darkgreen')).add_to(m)\n",
+    "#     folium.Marker([row['TechCo_Latitude'], row['TechCo_Longitude']], icon=folium.Icon(icon='briefcase',color='black')).add_to(m)\n",
+    "    folium.Marker([row['Airport_Latitude'], row['Airport_Longitude']], icon=folium.Icon(icon='plane',color='red')).add_to(m)\n",
+    "           \n",
+    "# Plot each polygon on the map\n",
+    "# GeoJson(two_mile_buffer.to_crs(epsg=4326)).add_to(m)\n",
+    "\n",
+    "# Show the map\n",
+    "embed_map(m, 'm1.html')"
+   ]
   },
   {
    "cell_type": "code",
